; ModuleID = '/home/carl/AnghaBench/Cinder/src/glload/extr_gl_load.c_ParseVersionFromString.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glload/extr_gl_load.c_ParseVersionFromString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*)* @ParseVersionFromString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ParseVersionFromString(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca [10 x i8], align 1
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  store i8* null, i8** %7, align 8
  store i32 0, i32* %8, align 4
  %11 = load i32*, i32** %5, align 8
  store i32 0, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  store i32 0, i32* %12, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i8* @strchr(i8* %13, i8 signext 46)
  store i8* %14, i8** %7, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  br label %77

18:                                               ; preds = %3
  %19 = load i8*, i8** %7, align 8
  %20 = ptrtoint i8* %19 to i64
  %21 = load i8*, i8** %6, align 8
  %22 = ptrtoint i8* %21 to i64
  %23 = sub nsw i64 %20, %22
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %8, align 4
  %25 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 0
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @strncpy(i8* %25, i8* %26, i32 %27)
  %29 = load i32, i32* %8, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 %30
  store i8 0, i8* %31, align 1
  %32 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 0
  %33 = call i32 @atoi(i8* %32)
  %34 = load i32*, i32** %4, align 8
  store i32 %33, i32* %34, align 4
  %35 = load i8*, i8** %6, align 8
  %36 = load i32, i32* %8, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i8, i8* %35, i64 %37
  %39 = getelementptr inbounds i8, i8* %38, i64 1
  %40 = call i8* @strchr(i8* %39, i8 signext 32)
  store i8* %40, i8** %7, align 8
  %41 = load i8*, i8** %7, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %51, label %43

43:                                               ; preds = %18
  %44 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 0
  %45 = load i8*, i8** %6, align 8
  %46 = load i32, i32* %8, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i8, i8* %45, i64 %47
  %49 = getelementptr inbounds i8, i8* %48, i64 1
  %50 = call i32 @strcpy(i8* %44, i8* %49)
  br label %73

51:                                               ; preds = %18
  %52 = load i8*, i8** %7, align 8
  %53 = ptrtoint i8* %52 to i64
  %54 = load i8*, i8** %6, align 8
  %55 = ptrtoint i8* %54 to i64
  %56 = sub nsw i64 %53, %55
  %57 = trunc i64 %56 to i32
  store i32 %57, i32* %10, align 4
  %58 = load i32, i32* %10, align 4
  %59 = load i32, i32* %8, align 4
  %60 = add nsw i32 %59, 1
  %61 = sub nsw i32 %58, %60
  store i32 %61, i32* %10, align 4
  %62 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 0
  %63 = load i8*, i8** %6, align 8
  %64 = load i32, i32* %8, align 4
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i8, i8* %63, i64 %65
  %67 = getelementptr inbounds i8, i8* %66, i64 1
  %68 = load i32, i32* %10, align 4
  %69 = call i32 @strncpy(i8* %62, i8* %67, i32 %68)
  %70 = load i32, i32* %10, align 4
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 %71
  store i8 0, i8* %72, align 1
  br label %73

73:                                               ; preds = %51, %43
  %74 = getelementptr inbounds [10 x i8], [10 x i8]* %9, i64 0, i64 0
  %75 = call i32 @atoi(i8* %74)
  %76 = load i32*, i32** %5, align 8
  store i32 %75, i32* %76, align 4
  br label %77

77:                                               ; preds = %73, %17
  ret void
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
